# faster

./: .gitignore  BUILD.bazel  Tiltfile  WORKSPACE  bazel-bin  bazel-faster  bazel-out  bazel-testlogs
greeter/: BUILD.bazel  app.go
greeter/k8s/: greeter-deployment.yaml
greeter/proto/: def.bzl
greeter/proto/v1/: BUILD.bazel  helloworld.proto  package.go
greeter/srv/: BUILD.bazel  server.go
ingress/: BUILD.bazel  envoy.yaml
ingress/k8s/: ingress-deployment.yaml
k8s/: namespace.yaml
local-k8s/: core-dns.yaml
