load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "greeter_lib",
    srcs = ["app.go"],
    importpath = "github.com/iieroglu/faster/greeter",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "greeter",
    embed = [":greeter_lib"],
    visibility = ["//visibility:public"],
)
