load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "greeter_lib",
    srcs = ["app.go"],
    importpath = "github.com/iieroglu/faster/greeter",
    visibility = ["//visibility:private"],
    deps = [
        "//greeter/proto/v1:proto",
        "//greeter/srv",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],
)

go_binary(
    name = "greeter",
    embed = [":greeter_lib"],
    visibility = ["//visibility:public"],
)
