load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "greeter_lib",
    srcs = ["app.go"],
    importpath = "github.com/iieroglu/faster/greeter",
    visibility = ["//visibility:private"],
    deps = [
        "//greeter/proto/v1:proto",
        "//greeter/srv",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],
)

go_binary(
    name = "greeter",
    embed = [":greeter_lib"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//go:image.bzl", GO_DEFAULT_BASE = "DEFAULT_BASE")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

container_image(
    name = "go_default_image",
    base = GO_DEFAULT_BASE,
    ports = [
        "5000",
    ],
    visibility = ["//visibility:public"],
)

go_image(
    name = "greeter_service_image",
    base = ":go_default_image",
    embed = [":greeter_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)
