load("@io_bazel_rules_docker//container:container.bzl", "container_image")

container_image(
    name = "envoy_ingress_image",
    base = "@envoy_base//image",
    directory = "/etc/envoy",
    files = [
        ":envoy.yaml",
        "//greeter/proto/v1:v1_proto_pb",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

k8s_object(
    name = "ingress-server",
    kind = "deployment",

    # A template of a Kubernetes Deployment object yaml.
    template = ":k8s/ingress-deployment.yaml",
)
