load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "srv",
    srcs = ["server.go"],
    importpath = "github.com/iieroglu/faster/greeter/srv",
    visibility = ["//visibility:public"],
    deps = [
        "//greeter/proto/v1:proto",
        "@org_golang_x_net//context:go_default_library",
    ],
)
