load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@com_github_grpc_ecosystem_grpc_gateway_v2//protoc-gen-openapiv2:defs.bzl", "protoc_gen_openapiv2")
load("//greeter:proto/def.bzl", "fast_proto_library")

# keep
fast_proto_library(
    name = "v1_proto",
    srcs = [
        "helloworld.proto",
    ],
    descriptor_visibility = ["//visibility:public"],
    visibility = ["//visibility:public"],
)

#keep
go_proto_library(
    name = "go_proto_library",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
        "@io_bazel_rules_go//proto:go_proto_validate",
    ],
    importpath = "github.com/iieroglu/faster/greeter/proto/v1",
    protos = [":v1_proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_grpc_ecosystem_grpc_gateway_v2//protoc-gen-openapiv2/options:go_default_library",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

proto_library(
    name = "proto_proto",
    srcs = ["helloworld.proto"],
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_proto"],
)

go_library(
    name = "proto",
    srcs = ["package.go"],
    embed = [":go_proto_library"],
    importpath = "github.com/iieroglu/faster/greeter/proto/v1",
    visibility = ["//visibility:public"],
)
